css/index.css
body {
  font-family: "Roboto", sans-serif;
  height: 100vh;
  width: 100vw;
  font-size: 1rem;
  display: grid;
  grid-template-areas: "dashboard main-header"
    "dashboard main-content";
  grid-template-columns: 1fr 5fr;
  grid-template-rows: 1fr 4fr;
}

.dashboard {
  grid-area: dashboard;
  color: #FFFFFF;
  background-color: #1992D4;
  padding: 2rem 3rem 0 2rem;
}

.dashboard-navigation {
  margin-top: 3rem
}

.dashboard-settings {
  margin-top: 3rem
}


.main-content {
  grid-area: main-content;
}

.main-header {
  grid-area: main-header;
  box-shadow: 0 0.05rem 0.5rem -0.05rem #c1c6cc;
}

ul,
h2 {
  margin: 0;
  padding: 0;
}

.dashboard-title {
  display: flex;
  align-items: center;
  font-size: 1.75rem;
}

.dashboard-title img {
  height: 2.5rem;
  filter: invert();
  margin-right: 0.5rem;
}

li {
  list-style: none;
  margin-top: 1rem;
}

li:first-child {
  margin: 0;
}

li a {
  text-decoration: none;
  color: #FFFFFF;
  display: flex;
  align-items: center;
}

a img {
  height: 1.25rem;
  margin-right: 1rem;
  filter: invert();
}

.main-navigation {
  display: flex;
  flex-direction: column;
}

.dashboard-link {
  display: block;
}

.user-tools {
  display: flex;
  align-items: center;
  margin-top: 2rem;
}

/* ==== SEARCH FORM STYLING ==== */

.search-form {
  display: flex;
  margin-left: 2.5rem;
  align-items: center;
  height: 2.5rem;
}

.search-button {
  border: none;
  background: none;
  margin: 0;
  padding: 0;
}

.search-button img {
  height: 1.75rem;
  width: auto;
}

.search-input {
  margin: 0;
  padding: 0;
  border: none;
  border-radius: 2rem;
  background: none;
  margin-left: 1rem;
  height: 2.5rem;
}

.search-input,
textarea {
  padding-left: 1.75rem;
  color: #797c80;
  background-color: #E2E8F0;
}

.search-input:focus,
textarea:focus {
  outline: none !important;
  box-shadow: 0 0 0.7rem #c1c6cc;
}

/* ==== SEARCH FORM STYLING ==== */
.notification-button {
  display: flex;
  align-items: center;
  border: none;
  background: none;
  margin: 0;
  padding: 0;
}

.notification-button img {
  height: 1.5rem;
  width: auto;
}

